--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,6 +5,7 @@
         <title>A Better way to see Txt</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://bootswatch.com/5/litera/bootstrap.min.css">
+		<link rel="icon" href="./img/favicon.png" />
         <link rel="stylesheet" href="/css/Sass.css">
     </head>
 
@@ -18,9 +19,9 @@
         </div>
         
         <script src="/js/ajax.js"></script>
-        <script src="/js/funciones.js"></script>
-        <script src="/js/funciones2.js"></script>
-        <script src="/js/funciones3.js"></script>
-        <script src="/js/funciones4.js"></script>
+        <script src="/js/funciones.js"></script>  {{!--formulario Inicial --}}
+        <script src="/js/funciones2.js"></script> {{!--Mostrar tablas --}}
+        <script src="/js/funciones3.js"></script> {{!--Mostrar tablas con db --}}
+        <script src="/js/funciones4.js"></script> {{!--Pop up de Errores --}}
     </body>
 </html>
