--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,7 @@
 <header class="inicio">
     <nav class="navbar navbar-expand-lg navbar-light bg-light"  >
                 <a class="navbar-brand" href="/">Ingresar Datos</a>
+                <a class="navbar-brand" href="/viewdb">Visualisar DB</a>
                 <a class="navbar-brand" href="/view">Visualisar</a> 
     </nav>
 
