Le cambie el nombre a los archivos de funciones y mejoré el add post para jsons, pero me falta la parte de getSubdata

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,9 +19,9 @@
         </div>
         
         <script src="/js/ajax.js"></script>
-        <script src="/js/funciones.js"></script>  {{!--formulario Inicial --}}
-        <script src="/js/funciones2.js"></script> {{!--Mostrar tablas --}}
-        <script src="/js/funciones3.js"></script> {{!--Mostrar tablas con db --}}
-        <script src="/js/funciones4.js"></script> {{!--Pop up de Errores --}}
+        <script src="/js/sendForm.js"></script>  {{!--formulario Inicial --}}
+        <script src="/js/tableRender.js"></script> {{!--Mostrar tablas --}}
+        <script src="/js/tableRenderdb.js"></script> {{!--Mostrar tablas con db --}}
+        <script src="/js/errorHandle.js"></script> {{!--Pop up de Errores --}}
     </body>
 </html>
