Se le quitó sqlite y se le agregó Pocket base, se re estructuraron algunas funciones para que sean más modular

--- a/views/Inicio.hbs
+++ b/views/Inicio.hbs
@@ -4,9 +4,9 @@
       <div class="form-group margen">
           <label for="Artículo" for="formfile">Tipo de Guardado</label>
           <select name="Selec" id="Idselectipo" class="form-select" name = "selctipo"aria-label="Default select example">
+            <option value="data-pb">PocketBase</option>
             <option value="json">Json</option>
             <option value="data-base">Data Base</option>
-            {{!-- <option value="data-base-local">Data Base Local</option> --}}
           </select>
       </div> 
       <div class="form-group">
