Se dejó solo la parte de mysql

--- a/views/Inicio.hbs
+++ b/views/Inicio.hbs
@@ -4,13 +4,11 @@
       <div class="form-group margen">
           <label for="Artículo" for="formfile">Tipo de Guardado</label>
           <select name="Selec" id="Idselectipo" class="form-select" name = "selctipo"aria-label="Default select example">
-            <option value="data-pb">PocketBase</option>
-            <option value="json">Json</option>
             <option value="data-base">Data Base</option>
           </select>
       </div> 
       <div class="form-group">
-        <label class="form-label mt-4">Nombre del Json</label>
+        <label class="form-label mt-4">Nombre del Subtipo</label>
         <input type="text" class="form-control" id="idnombdato" name="nombre" placeholder="Ingresar el nombre">
       </div>
         <div class="form-group margen">
