--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,6 +22,8 @@
         <script src="/js/sendForm.js"></script>  {{!--formulario Inicial --}}
         <script src="/js/tableRender.js"></script> {{!--Mostrar tablas --}}
         <script src="/js/tableRenderdb.js"></script> {{!--Mostrar tablas con db --}}
+        <script src="/js/editarSubtipo.js"></script>   {{!--Cambio del subtipo--}}
+        <script src="/js/deleteLink.js"></script>   {{!--borra el link--}}
         <script src="/js/errorHandle.js"></script> {{!--Pop up de Errores --}}
     </body>
 </html>
