Se modularizo eel geturldata y se le agregó opciones al meta-scraper

--- a/Sass/Sass.scss
+++ b/Sass/Sass.scss
@@ -111,6 +111,6 @@ footer {
         grid-gap: none;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-around;
     }
 }
