Se ha modularizado algunos apartados (Falta poner la api de Youtube)

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,6 +20,7 @@
         
         <script src="/js/ajax.js"></script>
         <script src="/js/sendForm.js"></script>  {{!--formulario Inicial --}}
+        <script src="/js/selectRender.js"></script> {{!--Mostrar Selecs --}}
         <script src="/js/tableRender.js"></script> {{!--Mostrar tablas --}}
         <script src="/js/tableRenderdb.js"></script> {{!--Mostrar tablas con db --}}
         <script src="/js/editarSubtipo.js"></script>   {{!--Cambio del subtipo--}}
