Se agregó la api de Youtube, se agregó un modulo para desparcear la query, y un btn para ver todos los resultados

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,8 +23,9 @@
         <script src="/js/selectRender.js"></script> {{!--Mostrar Selecs --}}
         <script src="/js/tableRender.js"></script> {{!--Mostrar tablas --}}
         <script src="/js/tableRenderdb.js"></script> {{!--Mostrar tablas con db --}}
-        <script src="/js/editarSubtipo.js"></script>   {{!--Cambio del subtipo--}}
+        <script src="/js/editarSubtipo.js"></script>   {{!--Cambio del subtipo--}} 
         <script src="/js/deleteLink.js"></script>   {{!--borra el link--}}
         <script src="/js/errorHandle.js"></script> {{!--Pop up de Errores --}}
+        <script src="/js/filtersTop.js"></script> {{!--Filtros en la parte superior --}}
     </body>
 </html>
