--- a/views/viewdb.hbs
+++ b/views/viewdb.hbs
@@ -1,3 +1,6 @@
+<div class="form-group">
+    <button type="button" onclick="GetAllData()" class="btn btn-secondary">Mostrar todos los datos</button>
+</div> 
 <div class="form-group margen">
     <label for="Artículo" for="formfile">Id con todos los datos de la Base de Datos </label>
     <select name="Selec" onchange="selecActDb()" id="Idselecdb" class="form-select" aria-label="Default select example"></select>
