Se ha parseado la query de mysql con el connection.query

--- a/Sass/Sass.scss
+++ b/Sass/Sass.scss
@@ -12,7 +12,7 @@ $borde : 25px;
 $padd : 10px;
 $imagen: 200px; // Imagenes 
 $subcont : 1%; //0px 10px 0px 10px;
-$widhtDataContainer: 400px; // Ancho de los contenedores de informacion 
+$widhtDataContainer: 25rem; // Ancho de los contenedores de informacion 
 
 body{
     background-color: $backgroundColor;
