--- a/Sass/Sass.scss
+++ b/Sass/Sass.scss
@@ -91,6 +91,9 @@ footer {
     h1{
         font-size: 1.7rem;
     }
+    p,a {
+        line-break: anywhere;
+    }
 }
 .subcontainer {
     display: flex;
